--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,7 +17,7 @@
                     </div>
                     <h1>{{ .Title }}</h1>
                     <h3 class="subheading">{{ .Params.subtitle }}</h3>
-                    <span class="meta">Posted by {{ if .Params.author }}{{ .Params.author }}{{ else }}{{ .Site.Title }}{{ end }} on {{ .Date.Format " January 2, 2006" }}
+                    <span class="meta">Posted on {{ .Date.Format " January 2, 2006" }}
                     </span>
                 </div>
             </div>
