update copy right

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,7 +11,7 @@
 
                 <!-- Copy right -->
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ .Site.Title }}&sbquo; {{ if ne (.Date.Format "2006") (now.Format "2006") }} {{(.Date.Format "2006 - ") }} {{ end }} {{ now.Format "2006" }}
+                    Copyright &copy; {{ .Site.Title }}&sbquo; 2013 - {{ now.Format "2006" }}
                     <br>
                     {{ if .Site.Params.showOrigin }}
                     <a href="https://themes.gohugo.io/hugo-theme-cleanwhite">CleanWhite Hugo Theme</a> by <a href="https://zhaohuabing.com">Huabing</a>
