--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,4 +1,4 @@
-{{ if and (.Site.DisqusShortname) (not (eq .Params.showdisqus false)) }}
+{{ if and (.Site.Config.Services.Disqus.Shortname) (not (eq .Params.showdisqus false)) }}
 <!-- disqus 评论框 end -->
 <div id="disqus-comment">
     {{ if .Site.Params.disqus_proxy }}
@@ -7,7 +7,7 @@
     <script src="{{ $iDisqusscript.Permalink }}"></script>
     <script>
     var disq = new iDisqus('disqus-comment', {
-        forum: '{{ .Site.DisqusShortname}}',
+        forum: '{{ .Site.Config.Services.Disqus.Shortname }}',
         api: '{{ .Site.Params.disqus_proxy }}',
         site: '{{ .Site.Params.disqus_site }}',
         mode: 1,
